tests/ui/capital_letter_var.stderr
error[E0425]: cannot find value `Not_a_variable` in this scope
 --> tests/ui/capital_letter_var.rs:8:30
  |
8 |     Ok(Not_a_variable) <- Ok(Not_a_variable);
  |                              ^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `Not_a_variable` in this scope
 --> tests/ui/capital_letter_var.rs:8:8
  |
8 |     Ok(Not_a_variable) <- Ok(Not_a_variable);
  |        ^^^^^^^^^^^^^^ not found in this scope
